# nascar_chatbot

./: README.md
api/: agent.py  app.py  pyproject.toml  sanbox.ipynb  test_sandbox.ipynb
api/models/: agent_state.py  chat_request.py
api/prompts/: prompts.py
api/services/: chat_service.py  documents_loader_service.py
api/tools/: nascar_rag_tool.py  tavily_web_search.py
frontend/: MARKDOWN_TEST.md  README.md  package-lock.json  package.json  start.sh  tailwind.config.ts
frontend/src/app/: globals.css  page.tsx  page_old.tsx
frontend/src/components/: RacingComponents.tsx
