[project]
name = "nascar-chatbot"
version = "0.0.1"
readme = "../README.md"
requires-python = ">=3.13.4"
dependencies = [
  "fastapi>=0.115.12",
  "pydantic>=2.11.4",
  "uvicorn>=0.34.2",
  "python-multipart==0.0.18",
  "langchain-community>=0.3.27",
  "langchain-openai>=0.3.27",
  "langgraph>=0.5.1",
  "langsmith>=0.4.4",
  "langchain-tavily>=0.2.11",
  "langchain-qdrant>=0.2.0",
  "pymupdf>=1.26.3",
  "python-dotenv"
]